worked on the chore results page plus a whole bunch of work that didn't work out and had to be scrapped

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ src/main/webapp/css/
 src/test/java/edu/matc/entity/
 target/generated-sources/
 target/generated-test-sources/
+/src/main/java/edu/matc/controller/AddUser.java
