--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ src/test/java/edu/matc/entity/
 target/generated-sources/
 target/generated-test-sources/
 /src/main/java/edu/matc/controller/AddUser.java
+/src/main/webapp/META-INF/context.xml
+!/src/main/webapp/META-INF/context.xml
+!/code_coverage.png
